--- a/site/resources/styles/themes/resume.css
+++ b/site/resources/styles/themes/resume.css
@@ -2734,9 +2734,8 @@ section div.grid {
   grid-column-gap: 15px;
   grid-row-gap: 15px;
 }
-section div.grid > div {
-  margin-right: 37.5px;
-  margin-bottom: 22.5px;
+section div.grid.employment {
+  grid-template-columns: repeat(3, 1fr);
 }
 section div.grid > div h3:first-child {
   margin-top: 0;
@@ -2851,6 +2850,15 @@ ul.employment li:last-child:after {
   .text-flow section div.contact {
     display: block;
   }
+  .text-flow section div.grid {
+    grid-template-columns: 1fr;
+  }
+  .text-flow section div.grid.projects ul.details li {
+    list-style-type: none;
+  }
+  .text-flow section div.grid.employment {
+    grid-template-columns: 1fr;
+  }
 }
 @media (max-width: 320px) {
   .text-flow .timeline .years {
@@ -2876,10 +2884,12 @@ ul.employment li:last-child:after {
   body .page section {
     display: block;
   }
+  body .page section div .timeline {
+    left: 100px;
+    margin-right: 100px;
+  }
   body .page section div.grid > div {
     width: 100%;
-    margin-right: 0;
-    margin-bottom: 0;
   }
   .page-break {
     page-break-before: always;
