Update print stylesheet to remove width restriction

--- a/site/resources/styles/core/text.less
+++ b/site/resources/styles/core/text.less
@@ -208,6 +208,14 @@ pre > code,
     }
   }
 
+  @media print
+  {
+    &.wide
+    {
+      max-width: none;
+    }
+  }
+
   ul:not([class]),
   ol:not([class])
   {
