--- a/site/resources/styles/themes/resume.css
+++ b/site/resources/styles/themes/resume.css
@@ -2673,19 +2673,28 @@ h4 {
   display: flex;
 }
 .text-flow section div.contact div {
-  flex: 4;
+  flex: 2;
 }
 .text-flow section div.contact div h2 {
   margin-top: 15px;
   font-size: 167%;
 }
+.text-flow section div.contact div h2 + ul {
+  margin-top: 0;
+}
 .text-flow section div.contact ul {
   flex: 2;
   list-style: none;
   padding-left: 0;
+  margin-bottom: 0;
+  margin-top: 15px;
 }
 .text-flow section div.contact ul li {
   padding-left: 0;
+}
+.text-flow section div.contact img {
+  margin-top: 15px;
+  height: 120px;
 }
 @media screen and (min-width: 900px) {
   .grid > div {
@@ -2703,15 +2712,10 @@ section:first-child > h1 {
 section h1:first-child {
   flex: 1;
   font-variant: small-caps;
-  margin-top: 22.5px;
   margin-right: 22.5px;
 }
 section h2:first-child {
   margin-top: 0;
-}
-section p:first-child,
-section ul:first-child {
-  margin-top: 22.5px;
 }
 section a:link,
 section a:visited {
@@ -2733,11 +2737,11 @@ section div {
   margin-top: 0;
 }
 section div.grid {
-  margin-top: 22.5px;
+  margin-top: 15px;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   grid-column-gap: 15px;
-  grid-row-gap: 15px;
+  grid-row-gap: 0;
 }
 section div.grid.employment {
   grid-template-columns: repeat(3, 1fr);
